Fixed alignment

--- a/style.css
+++ b/style.css
@@ -4,26 +4,27 @@
 }
 
 header {
-text-align: center;
-padding: 0 20%;
+	text-align: center;
+	padding: 0 20%;
 }
 
 section {
 	display: inline-block;
 	margin-bottom: 3em;
 	padding: 0 1em;
-}
-
-section img {
-	float:right;
-	max-height: 50%;
-	width: 40%;
+	width:100%;
 }
 
 section p {
 	font-size: 1.2em;
 	line-height: 1.5em;
-	width: 40%;
+	max-width:50%;
+
+}
+
+section img {
+	float:right;
+	max-width:50%;
 
 }
 
